[replacer] Add proptery option in tag

--- a/extensions/text-replacer-extension/src/popup/popup.html
+++ b/extensions/text-replacer-extension/src/popup/popup.html
@@ -11,7 +11,8 @@
     <form id="replaceForm">
       <div class="form-group">
         <label for="tagName">HTML Tag:</label>
-        <input type="text" id="tagName" placeholder="e.g., div, span, p">
+        <input type="text" id="tagName" placeholder="e.g., div, span, p or tag;attribute (a;HREF)">
+        <div class="help-text">For attribute replacement use: tag;attribute (e.g., a;NAME)</div>
       </div>
       
       <div class="form-group">
