Fix bug on domain field
Parse properly and store it

--- a/extensions/text-replacer/src/options/options.html
+++ b/extensions/text-replacer/src/options/options.html
@@ -53,6 +53,7 @@
         <div class="form-group">
           <label for="domain">Apply to domain:</label>
           <input type="text" id="domain" placeholder="e.g., example.com (leave empty for all domains)">
+          <div class="help-text">Enter just the domain name or full URL (http:// will be removed automatically)</div>
         </div>
         
         <button type="button" id="saveBtn">Save Replacement Set</button>
