Makes mendatory on domain field

--- a/extensions/text-replacer/src/options/options.html
+++ b/extensions/text-replacer/src/options/options.html
@@ -51,9 +51,9 @@
         </div>
         
         <div class="form-group">
-          <label for="domain">Apply to domain:</label>
-          <input type="text" id="domain" placeholder="e.g., example.com (leave empty for all domains)">
-          <div class="help-text">Enter just the domain name or full URL (http:// will be removed automatically)</div>
+          <label for="domain">Apply to Domain:</label>
+          <input type="text" id="domain" required placeholder="e.g., example.com">
+          <small class="helper-text">Domain name where this rule should apply (required)</small>
         </div>
         
         <button type="button" id="saveBtn">Save Replacement Set</button>
