[replacer] Update rule setting UI
Disable feature on rule entry
Remove domain field from poup

--- a/extensions/text-replacer/src/popup/popup.html
+++ b/extensions/text-replacer/src/popup/popup.html
@@ -14,11 +14,10 @@
         <table id="savedSetsTable">
           <thead>
             <tr>
-              <th>Action</th>
+              <th>Status</th> <!-- Changed from "Action" to "Status" -->
               <th>Tag</th>
               <th>Find</th>
               <th>Replace</th>
-              <th>Domain</th>
             </tr>
           </thead>
           <tbody id="savedSetsBody">
